--- a/tranf4.css
+++ b/tranf4.css
@@ -6,15 +6,15 @@ a{
 
 
 a span{
-  position:absolute;    
   opacity:0;
-  margin-top:25px;
+  position:absolute;    
   margin-left:-20px;
+  margin-top:25px;
   color:red;
   background:#FFF;
-  padding:15px;
-  border-radius:3px;
-  box-shadow:0 0 2px rgba(0,0,0,.5);
+  padding:20px;
+  border-radius:5px;
+  box-shadow:0 0 2px;
 }
 a:hover span{
   opacity:1;
